--- a/frontend/src/screens/SendScreen/sendScreen.css
+++ b/frontend/src/screens/SendScreen/sendScreen.css
@@ -29,6 +29,14 @@ Body {
           border: 2px solid green;
           box-sizing: border-box;
       }
+      input[type=num]{
+        width: 100%;
+        margin: 10px 0px;
+        padding: 12px 25px;
+        display: inline-block;
+        border: 2px solid green;
+        box-sizing: border-box;
+    }
    a:hover {
           opacity: 0.7;
       }
@@ -38,15 +46,14 @@ Body {
           height: 300px;
       }
       .button{
-        padding: 1%;
-        margin-bottom: 50%;
-        border-width: medium;
-        border-color: #009999;
-        font-size: 1rem;
+        background-color: #F7F9F6;
+        padding: 1.7%;
+        font-size: 1.5rem;
         border-radius: 5px;
-        background-color: #FFFFFF;
         text-align: center;
         text-decoration: none;
+        color: #585858;
+        font-family: "Monaco", Times, serif;
       }
       .button:hover{
         background-color:#018037;
