--- a/frontend/src/screens/TransactionScreen/transactions.css
+++ b/frontend/src/screens/TransactionScreen/transactions.css
@@ -1,6 +1,6 @@
 Body {
-    font-family: Calibri, Helvetica, sans-serif;
-    background-color: #018037;
+  font-family: "Monaco", Times, serif;
+  background-color: #F7F9F6;
   }
   a {
          background-color: #4CAF50;
@@ -12,7 +12,7 @@ Body {
           cursor: pointer;
     }
     h1{
-      color: #FFFFFF;
+      color: #ADEEA2;
       font-size: 4rem;
       margin: 2%;
     }
@@ -37,14 +37,14 @@ Body {
 
     ul{
       text-align: left;
-      background-color: #04989E;
+      background-color: #ADEEA2;
       border: 3px solid #f1f1f1;
       border-radius: 8px;
       list-style: none;
       padding-bottom: 15px;
     }
     ul li{
-      background-color: #FFFFFF;
+      background-color: #ADEEA2;
       color: #000000;
       font-size: 1.3rem;
       border-radius: 5px;
@@ -59,17 +59,16 @@ Body {
     }
   
    .container {
-          background-color: #04989E;
+          background-color: #ADEEA2;
           height: 300px;
       }
       .button{
         padding: 1%;
         margin-bottom: 50%;
         border-width: medium;
-        border-color: #009999;
         font-size: 1rem;
         border-radius: 5px;
-        background-color: #FFFFFF;
+        background-color: #ADEEA2;
         text-align: center;
         text-decoration: none;
       }
